# zazo

./: .gitignore  .isort.cfg  .travis.yml  LICENSE  LICENSE.md  MANIFEST.in  README.md  nox.py  pyproject.toml  setup.cfg  setup.py  test-requirements.txt  tox.ini
.travis/: install.sh  run.sh
dev/reqs/: test.txt
dev/travis/: install.sh
docs/: Makefile
docs/source/: conf.py  index.rst
src/zazo/: __init__.py  abc.py  api.py  exceptions.py  resolver.py
tests/: conftest.py
tests/integration/: test_main.py
tests/lib/: test_abcs.py  test_expand.py  test_translate.py  yaml_fixtures.py
tests/lib/yaml/: __init__.py  abcs.py  convert.py  exceptions.py  expand.py  fixtures.py  translate.py  verify.py
tests/unit/: test_get_message.py
tests/yaml/: conflicts_resolvable.yaml  cycles.yaml  diamond.yaml  extras.yaml  simple.yaml  three_way.index.yaml  three_way.yaml
tests/yaml/from-monillo/: conflict.yaml  conflict_on_child.yaml  previous_conflict.yaml  swapping_children_with_successors.yaml  three_way.yaml
tools/reqs/: docs.txt  lint.txt  packaging.txt  test.txt
tools/travis/: install.sh  run.sh  tox-env.sh
zazo/: __init__.py  abc.py  exceptions.py  resolver.py
