[metadata]
name = zazo
version = attr: zazo.__version__

url = https://github.com/pradyunsg/zazo/
author = Pradyun Gedam
author_email = pradyunsg@gmail.com

description = An Extensible Dependency Resolver
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pip, dependency resolution

license = MIT
classifiers =
  Development Status :: 1 - Planning
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Topic :: Software Development :: Build Tools
  Programming Language :: Python
  Programming Language :: Python :: 2
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy

[options]
zip_safe = False
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
install_requires =
  packaging
  six
packages = find:
package_dir =
  = src

[options.packages.find]
where = src
exclude = tests, tools
